23-kubernetes/00-webhooks/scratch/00-simple-validating-webhook/manifests/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  namespace: default
  labels:
    app: nginx-1
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  namespace: default
  labels:
    app: nginx-2
    owner: PSKP-95     # required
spec:
  containers:
    - name: nginx
      image: nginx
