23-kubernetes/00-webhooks/scratch/00-simple-validating-webhook/manifests/local_test.yaml
# endpoint slice allows us to run webhook server on our machine and when
# new resource is getting created, it calls our api server because of IP specified in endpointslice
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: my-service-1
  labels:
    kubernetes.io/service-name: my-service
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - "192.168.43.246"
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
