23-kubernetes/00-webhooks/scratch/00-simple-validating-webhook/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
 name: "simple-validating-webhook.avabodha.in"
webhooks:
 - name: "simple-validating-webhook.avabodha.in"
   sideEffects: None
   admissionReviewVersions: ["v1"]
   namespaceSelector: {}
   rules:
     - apiGroups: [""]
       apiVersions: ["v1"]
       operations: ["CREATE"]
       resources: ["pods"]
       scope: "*"
   clientConfig:
     service:
       namespace: default
       name: my-service
       path: /validate-pods
       port: 443

     caBundle:
     # `caBundle` is a PEM encoded CA bundle which will be used to validate the
     # webhook's server certificate. If unspecified, system trust roots on the
     # apiserver are used.
      |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlFSWpDQ0F3cWdBd0lCQWdJVU1wOEJvYUk4
[...]
      VHd1VnMyVg0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQ0K
